# Async-URL-Analyzer

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt  worker.py
alembic/: env.py
api/: main_router.py
api/routes/: health.py  tasks.py  web_socket.py
api/schemas/: tasks.py
core/: database.py  redis.py  redis_queue.py  settings.py
db/: models.py
db/queries/: health.py  tasks.py
services/: tasks.py  url_validator.py
